--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -19,13 +19,9 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4">
           <span class="text-sm text-center text-platinum py-1 px-2">&gt; under construction</span>
           <span class="text-sm text-center text-platinum-400 py-1 px-2">
-              &gt; check out my projects
-              <a href="https://llm.bnle.me" class="text-platinum-600 hover:text-platinum-500 underline">llm.</a>,
-              <a href="https://snip.bnle.me" class="text-platinum-600 hover:text-platinum-500 underline">snip.</a>
-          </span>
-          <span class="text-sm text-center text-platinum-400 py-1 px-2">
             &gt; building
-            <a href="https://resumes.fyi" class="text-platinum-600 hover:text-platinum-500 underline">resumes.fyi</a>
+            <a href="https://resumes.fyi" class="text-platinum-600 hover:text-platinum-500 underline">resumes.fyi</a>,
+            <a href="https://bruhs.ai" class="text-platinum-600 hover:text-platinum-500 underline">bruhs.ai</a>
           </span>
       </div>
     </div>
