--- a/apps/portfolio/src/layouts/BaseLayout.astro
+++ b/apps/portfolio/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ import "@/styles/global.css";
     <meta name="msapplication-TileColor" content="#111111">
     <meta name="theme-color" content="#111111">
   </head>
-  <body class="h-full bg-platinum-950 overscroll-none font-krypton">
+  <body class="h-full bg-longan-950 overscroll-none font-krypton">
     <slot />
   </body>
 </html>
