--- a/apps/portfolio/src/styles/global.css
+++ b/apps/portfolio/src/styles/global.css
@@ -1,5 +1,2 @@
-@import "./fonts.css";
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@import "@bnle/ui/styles/index.css";
