feat(portfolio): update links

--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -19,9 +19,10 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4">
           <span class="text-body-sm text-center text-lychee-300 py-1 px-2">
             &gt; building
-            <a href="https://openyap.com" class="text-blueberry-400 hover:text-blueberry-300 underline">openyap.com</a>,
-            <a href="https://resumes.fyi" class="text-guava-400 hover:text-guava-300 underline">resumes.fyi</a>,
-            <a href="https://bruhs.ai" class="text-persimmon-400 hover:text-persimmon-300 underline">bruhs.ai</a>
+            <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline">openyap.com</a>,
+            <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline">resumes.fyi</a>,
+            <a href="https://bruhs.dev" class="text-durian-400 hover:text-durian-300 underline">bruhs.dev</a>,
+            <a href="https://bruhs.ai" class="text-durian-400 hover:text-durian-300 underline">bruhs.ai</a>
           </span>
       </div>
     </div>
