--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -9,7 +9,15 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 
 <BaseLayout>
   <div class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
-      <Image src={bruh} alt="bruh logo" width={60} height={60} loading="eager"/>
+    <a href="https://bruhs.dev" class="cursor-pointer">
+      <Image 
+        src={bruh} 
+        alt="bruh logo" 
+        width={60} 
+        height={60} 
+        loading="eager" 
+      />
+    </a>
   </div>
   <div id="home" class="h-full animate-fade-in opacity-0">
     <div class="flex flex-col h-full justify-center">
@@ -19,10 +27,9 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4">
           <span class="text-body-sm text-center text-lychee-300 py-1 px-2">
             &gt; building
-            <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline">openyap.com</a>,
-            <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline">resumes.fyi</a>,
             <a href="https://bruhs.dev" class="text-durian-400 hover:text-durian-300 underline">bruhs.dev</a>,
-            <a href="https://bruhs.ai" class="text-durian-400 hover:text-durian-300 underline">bruhs.ai</a>
+            <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline">resumes.fyi</a>,
+            <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline">openyap.com</a>
           </span>
       </div>
     </div>
