--- a/apps/portfolio/src/layouts/BaseLayout.astro
+++ b/apps/portfolio/src/layouts/BaseLayout.astro
@@ -8,17 +8,8 @@ import "@/styles/global.css";
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bryant Le Portfolio">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Bryant Le</title>
-
-    <link rel="sitemap" href="/sitemap-index.xml">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#111111">
-    <meta name="apple-mobile-web-app-title" content="Bryant Le">
-    <meta name="msapplication-TileColor" content="#111111">
-    <meta name="theme-color" content="#111111">
   </head>
   <body class="h-full bg-longan-950 overscroll-none font-krypton">
     <slot />
