feat(portfolio): add education

--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -46,6 +46,11 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
           <a href="https://www.hvnguyen.com/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">research@uh</a> |
           <a href="https://www.uh.edu/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">teaching@uh</a>
         </span>
+        <span class="text-body-sm text-center text-lychee-300 py-1 px-2"> 
+          &gt; education
+          <a href="https://www.utexas.edu/" class="text-persimmon-400 hover:text-persimmon-300 underline" target="_blank">ai@ut</a> |
+          <a href="https://www.uh.edu/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">cs@uh</a>
+        </span>
       </div>
     </div>
 
