feat(portfolio): remove text center

--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -24,29 +24,29 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
       <div class="flex justify-center items-center h-full">
         <span class="text-h2 text-center text-lychee-50 py-1 px-2 mb-4 font-semibold">Bryant Le</span>
       </div>
-      <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4">
-        <span class="text-body-sm text-center text-lychee-300 py-1 px-2">
+      <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4 max-w-[90vw]">
+        <span class="text-body-sm text-lychee-300 py-1 px-2">
           &gt; building
           <a href="https://bruhs.dev" class="text-durian-400 hover:text-durian-300 underline" target="_blank">bruhs.dev</a> |
           <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">resumes.fyi</a> |
           <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline" target="_blank">openyap.com</a> |
           <a href="https://sonner.ai" class="text-longan-400 hover:text-longan-300 underline" target="_blank">sonner.ai</a>
         </span>
-        <span class="text-body-sm text-center text-lychee-300 py-1 px-2">
+        <span class="text-body-sm text-lychee-300 py-1 px-2">
           &gt; freelance
           <a href="https://www.upwork.com/freelancers/bryantl6" class="text-guava-400 hover:text-guava-300 underline" target="_blank">upwork/bryantl6</a> |
           <a href="https://www.hidohealth.com/" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">hidohealth</a> |
           <a href="https://textvid.net/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">textvid</a> |
           <a href="https://www.listingwriter.net/" class="text-longan-400 hover:text-longan-300 underline" target="_blank">listingwriter</a>
         </span>
-        <span class="text-body-sm text-center text-lychee-300 py-1 px-2">
+        <span class="text-body-sm text-lychee-300 py-1 px-2">
           &gt; experience
           <a href="https://geico.com" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">software@geico</a> |
           <a href="https://aws.amazon.com/aws-supply-chain/" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">software@aws</a> |
           <a href="https://www.hvnguyen.com/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">research@uh</a> |
           <a href="https://www.uh.edu/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">teaching@uh</a>
         </span>
-        <span class="text-body-sm text-center text-lychee-300 py-1 px-2"> 
+        <span class="text-body-sm text-lychee-300 py-1 px-2"> 
           &gt; education
           <a href="https://www.utexas.edu/" class="text-persimmon-400 hover:text-persimmon-300 underline" target="_blank">ai@ut</a> |
           <a href="https://www.uh.edu/" class="text-rambutan-400 hover:text-rambutan-300 underline" target="_blank">cs@uh</a>
