feat(portfolio): update building

--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -29,8 +29,8 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
           &gt; building
           <a href="https://bruhs.dev" class="text-durian-400 hover:text-durian-300 underline" target="_blank">bruhs.dev</a> |
           <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">resumes.fyi</a> |
+          <a href="https://tw-border.com" class="text-longan-400 hover:text-longan-300 underline" target="_blank">tw-border.com</a>
           <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline" target="_blank">openyap.com</a> |
-          <a href="https://sonner.ai" class="text-longan-400 hover:text-longan-300 underline" target="_blank">sonner.ai</a>
         </span>
         <span class="text-body-sm text-rambutan-300 py-1 px-2">
           &gt; freelance
