--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -10,60 +10,145 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 <BaseLayout>
   <div class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
     <a href="https://bruhs.dev" class="cursor-pointer">
-      <Image 
-        src={bruh} 
-        alt="bruh logo" 
-        width={60} 
-        height={60} 
-        loading="eager" 
+      <Image
+        src={bruh}
+        alt="bruh logo"
+        width={60}
+        height={60}
+        loading="eager"
       />
     </a>
   </div>
   <div id="home" class="h-full">
     <div class="flex flex-col h-full justify-center">
       <div class="flex justify-center items-center h-full">
-        <span class="text-h2 text-center text-rambutan-50 py-1 px-2 mb-4 font-semibold">Bryant Le</span>
+        <span
+          class="text-h2 text-center text-rambutan-50 py-1 px-2 mb-4 font-semibold"
+          >Bryant Le</span
+        >
       </div>
-      <div class="flex flex-col mx-auto justify-center items-start h-full gap-y-4 max-w-[90vw]">
+      <div
+        class="flex flex-col mx-auto justify-center items-start h-full gap-y-4 max-w-[90vw]"
+      >
         <span class="text-body-sm text-rambutan-300 py-1 px-2">
           &gt; building
-          <a href="https://bruhs.dev" class="text-durian-400 hover:text-durian-300 underline" target="_blank">bruhs.dev</a> |
-          <a href="https://resumes.fyi" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">resumes.fyi</a> |
-          <a href="https://tw-border.com" class="text-longan-400 hover:text-longan-300 underline" target="_blank">tw-border.com</a>
-          <a href="https://openyap.com" class="text-longan-400 hover:text-longan-300 underline" target="_blank">openyap.com</a> |
+          <a
+            href="https://resumes.fyi"
+            class="text-blueberry-400 hover:text-blueberry-300 underline"
+            target="_blank">resumes.fyi</a
+          > |
+          <a
+            href="https://perdixlabs.com"
+            class="text-longan-400 hover:text-longan-300 underline"
+            target="_blank">perdixlabs.com</a
+          > |
+          <a
+            href="https://tw-border.com"
+            class="text-longan-400 hover:text-longan-300 underline"
+            target="_blank">tw-border.com</a
+          > |
+          <a
+            href="https://bruhs.dev"
+            class="text-durian-400 hover:text-durian-300 underline"
+            target="_blank">bruhs.dev</a
+          >
         </span>
         <span class="text-body-sm text-rambutan-300 py-1 px-2">
           &gt; freelance
-          <a href="https://www.upwork.com/freelancers/bryantl6" class="text-pandan-400 hover:text-pandan-300 underline" target="_blank">upwork/bryantl6</a> |
-          <a href="https://www.hidohealth.com/" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">hidohealth</a> |
-          <a href="https://textvid.net/" class="text-lychee-400 hover:text-lychee-300 underline" target="_blank">textvid</a> |
-          <a href="https://www.listingwriter.net/" class="text-longan-400 hover:text-longan-300 underline" target="_blank">listingwriter</a>
+          <a
+            href="https://www.upwork.com/freelancers/bryantl6"
+            class="text-pandan-400 hover:text-pandan-300 underline"
+            target="_blank">upwork/bryantl6</a
+          > |
+          <a
+            href="https://www.hidohealth.com/"
+            class="text-blueberry-400 hover:text-blueberry-300 underline"
+            target="_blank">hidohealth</a
+          > |
+          <a
+            href="https://textvid.net/"
+            class="text-lychee-400 hover:text-lychee-300 underline"
+            target="_blank">textvid</a
+          > |
+          <a
+            href="https://www.listingwriter.net/"
+            class="text-longan-400 hover:text-longan-300 underline"
+            target="_blank">listingwriter</a
+          >
         </span>
         <span class="text-body-sm text-rambutan-300 py-1 px-2">
           &gt; experience
-          <a href="https://geico.com" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">software@geico</a> |
-          <a href="https://aws.amazon.com/aws-supply-chain/" class="text-blueberry-400 hover:text-blueberry-300 underline" target="_blank">software@aws</a> |
-          <a href="https://www.hvnguyen.com/" class="text-lychee-400 hover:text-lychee-300 underline" target="_blank">research@uh</a> |
-          <a href="https://www.uh.edu/" class="text-lychee-400 hover:text-lychee-300 underline" target="_blank">teaching@uh</a>
+          <a
+            href="https://geico.com"
+            class="text-blueberry-400 hover:text-blueberry-300 underline"
+            target="_blank">software@geico</a
+          > |
+          <a
+            href="https://aws.amazon.com/aws-supply-chain/"
+            class="text-blueberry-400 hover:text-blueberry-300 underline"
+            target="_blank">software@aws</a
+          > |
+          <a
+            href="https://www.hvnguyen.com/"
+            class="text-lychee-400 hover:text-lychee-300 underline"
+            target="_blank">research@uh</a
+          > |
+          <a
+            href="https://www.uh.edu/"
+            class="text-lychee-400 hover:text-lychee-300 underline"
+            target="_blank">teaching@uh</a
+          >
         </span>
-        <span class="text-body-sm text-rambutan-300 py-1 px-2"> 
+        <span class="text-body-sm text-rambutan-300 py-1 px-2">
           &gt; education
-          <a href="https://www.utexas.edu/" class="text-persimmon-400 hover:text-persimmon-300 underline" target="_blank">ai@ut</a> |
-          <a href="https://www.uh.edu/" class="text-lychee-400 hover:text-lychee-300 underline" target="_blank">cs@uh</a>
+          <a
+            href="https://www.utexas.edu/"
+            class="text-persimmon-400 hover:text-persimmon-300 underline"
+            target="_blank">ai@ut</a
+          > |
+          <a
+            href="https://www.uh.edu/"
+            class="text-lychee-400 hover:text-lychee-300 underline"
+            target="_blank">cs@uh</a
+          >
         </span>
       </div>
     </div>
 
     <div class="fixed bottom-4 right-4 flex gap-x-2">
-        <a href="https://github.com/bnleft" class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors" target="_blank">
-            <Image src={github} alt="github logo" width={24} height={24} loading="eager"/>
-        </a>
-        <a href="https://www.linkedin.com/in/bnle" class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors" target="_blank">
-            <Image src={linkedin} alt="linkedin logo" width={24} height={24} loading="eager"/>
-        </a>
-        <a href="https://x.com/bnleft" class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors" target="_blank">
-            <Image src={x} alt="x logo" width={24} height={24} loading="eager"/>
-        </a>
+      <a
+        href="https://github.com/bnleft"
+        class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors"
+        target="_blank"
+      >
+        <Image
+          src={github}
+          alt="github logo"
+          width={24}
+          height={24}
+          loading="eager"
+        />
+      </a>
+      <a
+        href="https://www.linkedin.com/in/bnle"
+        class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors"
+        target="_blank"
+      >
+        <Image
+          src={linkedin}
+          alt="linkedin logo"
+          width={24}
+          height={24}
+          loading="eager"
+        />
+      </a>
+      <a
+        href="https://x.com/bnleft"
+        class="bg-rambutan-200 hover:bg-rambutan-300 p-1 rounded transition-colors"
+        target="_blank"
+      >
+        <Image src={x} alt="x logo" width={24} height={24} loading="eager" />
+      </a>
     </div>
   </div>
 </BaseLayout>
