feat(portfolio): update links

--- a/apps/portfolio/src/pages/index.astro
+++ b/apps/portfolio/src/pages/index.astro
@@ -43,6 +43,11 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
             target="_blank">perdixlabs.com</a
           > |
           <a
+            href="https://ogling.ai"
+            class="text-longan-600 hover:text-longan-300 underline"
+            target="_blank">ogling.ai</a
+          > |
+          <a
             href="https://tw-border.com"
             class="text-longan-400 hover:text-longan-300 underline"
             target="_blank">tw-border.com</a
@@ -69,11 +74,6 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
             href="https://textvid.net/"
             class="text-lychee-400 hover:text-lychee-300 underline"
             target="_blank">textvid</a
-          > |
-          <a
-            href="https://www.listingwriter.net/"
-            class="text-longan-400 hover:text-longan-300 underline"
-            target="_blank">listingwriter</a
           >
         </span>
         <span class="text-body-sm text-rambutan-300 py-1 px-2">
